force-app/main/default/objects/Metric_Calculator__c/Metric_Calculator__c.object-meta.xml
<CustomObject>
    <label>Metric Calculator</label>
    <nameField>
        <displayFormat>MC-{000000}</displayFormat>
        <label>用户指标 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metric Calculator</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>