force-app/main/default/objects/Metric_Calculator__c/fields/dauGrowthRate__c.field-meta.xml
<CustomField>
    <fullName>dauGrowthRate__c</fullName>
    <label>日活率环比</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>