force-app/main/default/objects/Metric_Calculator__c/fields/dauRate__c.field-meta.xml
<CustomField>
    <fullName>dauRate__c</fullName>
    <label>日活率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>