force-app/main/default/objects/Metric_Calculator__c/fields/mauGrowthRate__c.field-meta.xml
<CustomField>
    <fullName>mauGrowthRate__c</fullName>
    <label>月活环比</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>