force-app/main/default/objects/Metric_Calculator__c/fields/monthlyActiveUsers__c.field-meta.xml
<CustomField>
    <fullName>monthlyActiveUsers__c</fullName>
    <label>月活用户数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>