force-app/main/default/objects/Metric_Calculator__c/fields/totalBusinessRecords__c.field-meta.xml
<CustomField>
    <fullName>totalBusinessRecords__c</fullName>
    <label>业务单据总数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>